syntax = "proto3";

package keyauth.department;
option go_package = "github.com/infraboard/keyauth/pkg/department";

import "pkg/department/pb/enum.proto";
import "pkg/role/pb/role.proto";
import "github.com/infraboard/mcube/cmd/protoc-gen-go-ext/extension/tag/tag.proto";

// Department user's department
message Department {
    // 部门ID
    string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"_id" json:"id"'}
        ];
    // 路径
    string parent_path = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"parent_path" json:"parent_path"'}
        ];
    // 部门编号
    uint64 number = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"number" json:"number"'}
        ];
    // 部门创建时间
    int64 create_at = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"create_at" json:"create_at"'}
        ];
    // 更新时间
    int64 update_at = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"update_at" json:"update_at"'}
        ];
    // 创建人
    string create_by = 6[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"create_by" json:"create_by"'}
        ];
    // 部门所属域
    string domain = 7[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"domain" json:"domain"'}
        ];
    // 第几级部门, 由层数决定
    int32 grade = 8[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"grade" json:"grade"'}
        ];
    // 子部门数量
    int64 sub_count = 9[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"-" json:"sub_count"'}
        ];
    // 部门所有用户数量
    int64 user_count = 10[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"-" json:"user_count"'}
        ];
    // 部门名称
    string name = 11[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"name" json:"name"'}
        ];
    // 显示名称
    string display_name = 12[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"display_name" json:"display_name"'}
        ];
    // 上级部门ID
    string parent_id = 13[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"parent_id" json:"parent_id"'}
        ];
    // 部门管理者account
    string manager = 14[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"manager" json:"manager"'}
        ];
    // 部门成员默认角色
    string default_role_id = 15[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"default_role_id" json:"default_role_id"'}
        ];
    // 默认角色
    role.Role default_role = 16[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"-" json:"default_role,omitempty"'}
        ]; 
}

message Set {
    int64 total = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"total" json:"total"'}
        ];
    repeated Department items = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"items" json:"items"'}
        ];
}

// ApplicationForm todo
message ApplicationForm {
    // 申请单ID
    string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"_id" json:"id"'}
        ];
    // 域
    string domain = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"domain" json:"domain"'}
        ];
    // 申请人
    string creater = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"creater" json:"creater"'}
        ];
    // 创建时间
    int64 create_at =4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"create_at" json:"create_at"'}
        ];
    // 更新时间
    int64 update_at = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"update_at" json:"update_at"'}
        ];
    // 申请人
    string account = 6[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"account" json:"account"'}
        ];
    // 申请加入的部门
    string department_id = 7[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"department_id" json:"department_id"'}
        ];
    // 留言
    string message = 8[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"message" json:"message"'}
        ]; 
    // 状态
    ApplicationFormStatus status = 9[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"status" json:"status"'}
        ];
}

message ApplicationFormSet {
    int64 total = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"total" json:"total"'}
        ];
    repeated ApplicationForm items = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"items" json:"items"'}
        ];
}